@@ -131,7 +131,7 @@ public class ViewCategoryManager implements ContainerManager.ContainerListener
 
         if (!errors.isEmpty())
         {
-            Throwable first = errors.get(0);
+            Throwable first = errors.getFirst();
             if (first instanceof RuntimeException)
                 throw (RuntimeException)first;
             else
@@ -200,7 +200,7 @@ public class ViewCategoryManager implements ContainerManager.ContainerListener
 
         if (!errors.isEmpty())
         {
-            Throwable first = errors.get(0);
+            Throwable first = errors.getFirst();
             if (first instanceof RuntimeException)
                 throw (RuntimeException)first;
             else
@@ -345,7 +345,7 @@ public class ViewCategoryManager implements ContainerManager.ContainerListener
         List<String> names = new ArrayList<>();
         String[] originalAmps;
 
-        StringBuffer sb = new StringBuffer();
+        StringBuilder sb = new StringBuilder();
         String delim = "";
         String trailing = "";
 
@@ -376,7 +376,7 @@ public class ViewCategoryManager implements ContainerManager.ContainerListener
                     case '&' :
                         // this is the section delimiter
                         names.add(sb.toString());
-                        sb = new StringBuffer();
+                        sb = new StringBuilder();
                         break;
                     default :
                         sb.append(c);
@@ -484,9 +484,9 @@ public class ViewCategoryManager implements ContainerManager.ContainerListener
 
                 // test serialization encoding and decoding
                 String encoded = mgr.encode(cat);
-                String parts[] = mgr.decode(encoded);
+                String[] parts = mgr.decode(encoded);
 
-                assertTrue(parts.length == 1);
+                assertEquals(1, parts.length);
                 assertEquals(parts[0], cat.getLabel());
 
                 // create sub categories
@@ -508,7 +508,7 @@ public class ViewCategoryManager implements ContainerManager.ContainerListener
                     encoded = mgr.encode(subcat);
                     parts = mgr.decode(encoded);
 
-                    assertTrue(parts.length == 2);
+                    assertEquals(2, parts.length);
                     assertEquals(parts[0], cat.getLabel());
                     assertEquals(parts[1], subLabel);
                 }
@@ -554,7 +554,7 @@ public class ViewCategoryManager implements ContainerManager.ContainerListener
                 for (ViewCategory subCategory : cat.getSubcategories())
                 {
                     assertTrue(subCategoryNames.contains(subCategory.getLabel()));
-                    assertTrue(subCategory.getParentCategory().getRowId() == cat.getRowId());
+                    assertEquals(subCategory.getParentCategory().getRowId(), cat.getRowId());
                 }
             }
 
@@ -577,8 +577,8 @@ public class ViewCategoryManager implements ContainerManager.ContainerListener
             ViewCategory top = mgr.ensureViewCategory(c, user, "top");
 
             assertNotNull(top);
-            assertTrue(top.getParentCategory() == null);
-            assertTrue(top.getLabel().equals("top"));
+            assertNull(top.getParentCategory());
+            assertEquals("top", top.getLabel());
 
             ViewCategory subTop = mgr.ensureViewCategory(c, user, "top", "sub");
             // issue : 17123
@@ -586,14 +586,14 @@ public class ViewCategoryManager implements ContainerManager.ContainerListener
             mgr.ensureViewCategory(c, user, "top");
 
             assertNotNull(subTop);
-            assertTrue(subTop.getParentCategory().getLabel().equals("top"));
-            assertTrue(subTop.getLabel().equals("sub"));
+            assertEquals("top", subTop.getParentCategory().getLabel());
+            assertEquals("sub", subTop.getLabel());
 
             ViewCategory subBottom = mgr.ensureViewCategory(c, user, "bottom", "sub");
 
             assertNotNull(subBottom);
-            assertTrue(subBottom.getParentCategory().getLabel().equals("bottom"));
-            assertTrue(subBottom.getLabel().equals("sub"));
+            assertEquals("bottom", subBottom.getParentCategory().getLabel());
+            assertEquals("sub", subBottom.getLabel());
 
             mgr.deleteCategory(c, user, top);
             mgr.deleteCategory(c, user, subBottom.getParentCategory());
